tests/hook_syntax/imp.js
import { useFoo } from './exp';

useFoo() as empty; // error
